<resources>
    <string name="app_name">Reddit Clone App</string>
    <string name="nav_open">Expand</string>
    <string name="nav_close">Close</string>
    <string name="select_community">Select community</string>
    <string name="reddit_clone_app_title">Reddit Clone App</string>
    <string name="description_optional">Description (optional)</string>
    <string name="community_name">Community name</string>
    <string name="unfollow">Unfollow</string>
    <string name="short_description_of_the_community">Short description of the community</string>
    <string name="follow">Follow</string>
    <string name="post_upvote">Upvote post</string>
    <string name="post_downvote">Downvote post</string>
    <string name="post_comments">Comments</string>
    <string name="post_share">Share</string>
    <string name="don_t_have_an_account_register">Don\'t have an account? Register</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm password</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="create_a_post">Create a post</string>
    <string name="post_title">Post title</string>
    <string name="write_your_post">Write your post...</string>
    <string name="attach_image">Attach image</string>
    <string name="attach_video">Attach video</string>
    <string name="submit">Submit</string>
    <string name="create_community">Create community</string>
    <string name="communities_to_follow">Communities to follow</string>
    <string name="discover_new_communities_you_might_like">Discover new communities you might like</string>
    <string name="communities_you_follow">Communities you follow</string>
    <string name="manage_the_communities_you_are_following">Manage the communities you are following</string>
    <string name="short_community_description">Short community description...</string>
    <string name="c_community">c/community</string>
    <string name="posts_in_this_community">Posts in this community</string>
    <string name="upvote">Upvote</string>
    <string name="downvote">Downvote</string>
    <string name="share">Share</string>
    <string name="join_the_discussion">Join the discussion</string>
    <string name="write_a_comment">Write a comment...</string>
    <string name="comment">Comment</string>
    <string name="comments">Comments</string>
    <string name="post_content">Post content...</string>
</resources>